// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MedicationRow — snapshot baseline (PERF-B0-T01) renders completed medication and matches snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "paddingVertical": 10,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 16,
          "height": 32,
          "justifyContent": "center",
          "marginRight": 12,
          "width": 32,
        },
        {
          "backgroundColor": "#10B981",
        },
      ]
    }
  >
    <Text
      testID="icon-check"
    >
      check
    </Text>
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 14,
            "fontWeight": "600",
          },
          {
            "color": "#6B7280",
            "textDecorationLine": "line-through",
          },
        ]
      }
    >
      Atenolol
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "marginTop": 2,
        }
      }
    >
      <Text
        testID="icon-clock"
      >
        clock
      </Text>
      <Text
        style={
          [
            {
              "fontSize": 12,
              "marginLeft": 4,
            },
            {
              "color": "#6B7280",
            },
          ]
        }
      >
        20:00
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 6,
      }
    }
  />
</View>
`;

exports[`MedicationRow — snapshot baseline (PERF-B0-T01) renders pending medication and matches snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "paddingVertical": 10,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 16,
          "height": 32,
          "justifyContent": "center",
          "marginRight": 12,
          "width": 32,
        },
        {
          "backgroundColor": "#eef1fe",
          "borderColor": "#bbc7fb",
          "borderWidth": 2,
        },
      ]
    }
  />
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 14,
            "fontWeight": "600",
          },
          {
            "color": "#111827",
          },
        ]
      }
    >
      Metformin
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "marginTop": 2,
        }
      }
    >
      <Text
        testID="icon-clock"
      >
        clock
      </Text>
      <Text
        style={
          [
            {
              "fontSize": 12,
              "marginLeft": 4,
            },
            {
              "color": "#6B7280",
            },
          ]
        }
      >
        08:00
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 6,
      }
    }
  />
</View>
`;
